# catchemi

./: LICENSE  README.md  controller.c  density_of_states.c  environment.yml  pyproject.toml  quantities.c  quantities_newns_anderson.c  quantities_newns_anderson.h  requirements.txt  setup.json  setup.py
.github/workflows/: main.yml
catchemi/: NewnsAndersonAnalytical.py  NewnsAndersonDerivatives.py  NewnsAndersonGrimley.py  NewnsAndersonGrimleyRepulsion.py  NewnsAndersonLinearRepulsion.py  NewnsAndersonNumerical.py  NewnsAndersonRepulsion.py  __init__.py
catchemi/dftdos/: newnsanderson_repulsion_constgrid.py
catchemi/semiellipse/: analytical.py  derivatives.py  newnsanderson_repulsion.py  newnsandersongrimley_repulsion.py  numerical.py
docs/source/: conf.py  index.rst
examples/: newns_anderson_model.py  run_model.py
examples/inputs/: adsorption_energies.json  number_bonds.yaml
implementation_c/: quantities_newns_anderson.h
norskov_newns_anderson/: NewnsAnderson.py  NewnsAndersonAnalytical.py
norskov_newns_anderson_c/: Makefile  controller.c  density_of_states.c  density_of_states.h  quantities_newns_anderson.c  quantities_newns_anderson.h
src/catchemi/core/: __init__.py  _base.py  _calculation.py  _fixed_dim.py
src/catchemi/dftdos/: dftdos.py  fast_dftdos.py  newnsanderson_repulsion.py  newnsanderson_repulsion_constgrid.py
src/catchemi/fitting/: __init__.py  _base.py  _fixed_dim.py  dftdos.py  semiellipse.py
src/catchemi/input/: __init__.py  _base.py  _combined.py
tests/: conftest.py  test_core.py  test_fitting.py  test_input.py
(+5 files in other folders)
